View layer copy consumes a lot of RAM #74296

Closed
opened 2020-02-28 16:04:40 +01:00 by Yegor · 10 comments

System Information
Operating system: Linux-3.10.0-1062.9.1.el7.x86_64-x86_64-with-centos-7.7.1908-Core 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44

Blender Version
Broken: version: 2.83 (sub 5), branch: master, commit date: 2020-02-28 12:01, hash: da1140f75e, 2.82 release

Short description of error
Each new view layer eats up as much memory as the original one, even with undo completely disabled.
If you delete all the created view layers the memory remains occupied.
In this example the scene uses 1.5G of ram (which is 3x as big as 2.79 does by the way). After adding a second view layer it's about 3 gigs, a third - 4 gigs and so on.

Exact steps for others to reproduce the error
Open Blender.
Disable Undo completely (0).
Open the attached file.
Check memory usage via a system monitor.
Start adding view layers.
Check mem.
Delete created view layers.
Check mem.
view_layer_memory_issue.blend

**System Information** Operating system: Linux-3.10.0-1062.9.1.el7.x86_64-x86_64-with-centos-7.7.1908-Core 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44 **Blender Version** Broken: version: 2.83 (sub 5), branch: master, commit date: 2020-02-28 12:01, hash: `da1140f75e`, 2.82 release **Short description of error** Each new view layer eats up as much memory as the original one, even with undo completely disabled. If you delete all the created view layers the memory remains occupied. In this example the scene uses 1.5G of ram (which is 3x as big as 2.79 does by the way). After adding a second view layer it's about 3 gigs, a third - 4 gigs and so on. **Exact steps for others to reproduce the error** Open Blender. Disable Undo completely (0). Open the attached file. Check memory usage via a system monitor. Start adding view layers. Check mem. Delete created view layers. Check mem. [view_layer_memory_issue.blend](https://archive.blender.org/developer/F8378226/view_layer_memory_issue.blend)
Author

Added subscriber: @YegorSmirnov

Added subscriber: @YegorSmirnov

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Added subscriber: @ankitm

Added subscriber: @ankitm

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm this issue, not sure if this would count as bug though.

I can confirm this issue, not sure if this would count as bug though.

This issue was referenced by 836b99ce49

This issue was referenced by 836b99ce4926eea91655eb7642aea40d29b286df
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-03-11 14:20:24 +01:00
Author

Hey! Great that you've fixed memory releasing, but the "bug" was about memory consumption on layer creation (copy). Which, I assume, should be just a number of flags, not a huge data copy.

Hey! Great that you've fixed memory releasing, but the "bug" was about memory consumption on layer creation (copy). Which, I assume, should be just a number of flags, not a huge data copy.
Member

Currently every view layer has its own depsgraph. And every depsgraph maintains a copy of some ID data blocks that it can modify. This is where the memory usage comes from. I really don't know if it has to work this way, but I believe this is working as intended and is not a bug currently.

I was under the impression that the memory leak was the issue here, because this is part of your reproduction steps.

Currently every view layer has its own depsgraph. And every depsgraph maintains a copy of some ID data blocks that it can modify. This is where the memory usage comes from. I really don't know if it has to work this way, but I believe this is working as intended and is not a bug currently. I was under the impression that the memory leak was the issue here, because this is part of your reproduction steps.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74296
No description provided.