Fix T74296: Free depsgraph when view layer is removed

Reviewers: sergey

Differential Revision: https://developer.blender.org/D7110